Clean up image import
Mild refactoring to improve the performance of image import with large numbers of images.